Resolve latest tranche of Review Board comments